--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <header>
     <h1>🍔 FoodieHub</h1>
     <nav>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14home.html">Home</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14home.html">Restaurants</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14menu.html">Menu</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14order.html">Order</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14contact.html">Contact</a>
+        <a href="practical14home.html">Home</a>
+        <a href="practical14home.html">Restaurants</a>
+        <a href="practical14menu.html">Menu</a>
+        <a href="practical14order.html">Order</a>
+        <a href="practical14contact.html">Contact</a>
     </nav>
 </header>
 
@@ -27,3 +27,4 @@
 
 </body>
 </html>
+
