--- a/practical14order.html
+++ b/practical14order.html
@@ -10,10 +10,10 @@
     <h1>Place Your Order</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="restaurants.html">Restaurants</a>
-        <a href="menu.html">Menu</a>
-        <a href="order.html">Order</a>
-        <a href="contact.html">Contact</a>
+        <a href="`practical14restaurants.html">Restaurants</a>
+        <a href="practical14menu.html">Menu</a>
+        <a href="practical14order.html">Order</a>
+        <a href="practical14contact.html">Contact</a>
     </nav>
 </header>
 
@@ -32,4 +32,5 @@
 </div>
 
 </body>
+
 </html>
