--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <header>
     <h1>🍔 FoodieHub</h1>
     <nav>
-        <a href="practical14home.html">Home</a>
-        <a href="practical14home.html">Restaurants</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Restaurants</a>
         <a href="practical14menu.html">Menu</a>
         <a href="practical14order.html">Order</a>
         <a href="practical14contact.html">Contact</a>
@@ -27,4 +27,5 @@
 
 </body>
 </html>
+
 
