--- a/practical14contact.html
+++ b/practical14contact.html
@@ -9,11 +9,11 @@
 <header>
     <h1>Contact Us</h1>
     <nav>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14home.html">Home</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14home.html">Restaurants</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14menu.html">Menu</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14order.html">Order</a>
-        <a href="C:\Users\Atharv Reddy\OneDrive\Documents\My Games\Desktop\wad lab\Practicals\practical14contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Restaurants</a>
+        <a href="practical14menu.html">Menu</a>
+        <a href="practical14order.html">Order</a>
+        <a href="practical14contact.html">Contact</a>
     </nav>
 </header>
 
@@ -26,4 +26,5 @@
 </div>
 
 </body>
+
 </html>
