--- a/practical14menu.html
+++ b/practical14menu.html
@@ -10,7 +10,7 @@
     <h1>Food Menu</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="index.html">Restaurants</a>
+        <a href="practical14restaurant.html">Restaurants</a>
         <a href="practical14menu.html">Menu</a>
         <a href="practical14order.html">Order</a>
         <a href="practical14contact.html">Contact</a>
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
